fix: change container width size on mobile

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,8 +1,5 @@
 @media (max-width: 600px){
    #container{
-    width: 100%;
-   }
-   #footer{
-       width: 100%;
+    width: 94%;
    }
 }
